--- a/mscore/mscore/element.ui
+++ b/mscore/mscore/element.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>592</width>
-    <height>352</height>
+    <height>242</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -177,33 +177,7 @@
           </property>
          </widget>
         </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout">
-        <property name="spacing">
-         <number>6</number>
-        </property>
-        <property name="margin">
-         <number>0</number>
-        </property>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="toolTip">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string notr="true" comment="do not translate">Track</string>
-          </property>
-          <property name="textFormat">
-           <enum>Qt::PlainText</enum>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
+        <item row="2" column="2">
          <widget class="QSpinBox" name="track">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -225,10 +199,13 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QLabel" name="label_2">
+        <item row="2" column="0">
+         <widget class="QLabel" name="label">
+          <property name="toolTip">
+           <string notr="true"/>
+          </property>
           <property name="text">
-           <string notr="true" comment="do not translate">Tick</string>
+           <string notr="true" comment="do not translate">Track</string>
           </property>
           <property name="textFormat">
            <enum>Qt::PlainText</enum>
@@ -238,35 +215,7 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QSpinBox" name="time">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="toolTip">
-           <string notr="true"/>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-          <property name="specialValueText">
-           <string>invalid</string>
-          </property>
-          <property name="minimum">
-           <number>-1</number>
-          </property>
-          <property name="maximum">
-           <number>999999999</number>
-          </property>
-          <property name="value">
-           <number>-1</number>
-          </property>
-         </widget>
-        </item>
-        <item>
+        <item row="2" column="5">
          <widget class="QLabel" name="label_3">
           <property name="toolTip">
            <string notr="true"/>
@@ -282,7 +231,7 @@
           </property>
          </widget>
         </item>
-        <item>
+        <item row="2" column="6">
          <widget class="Awl::ColorLabel" name="color">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
