--- a/mscore/mscore/segment.ui
+++ b/mscore/mscore/segment.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>377</width>
-    <height>266</height>
+    <width>461</width>
+    <height>330</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,98 +28,192 @@
      <property name="flat">
       <bool>true</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Segment Type:</string>
-        </property>
-        <property name="textFormat">
-         <enum>Qt::PlainText</enum>
-        </property>
-       </widget>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0" colspan="2">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Segment Type:</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="segmentType">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="sizeAdjustPolicy">
+           <enum>QComboBox::AdjustToContents</enum>
+          </property>
+          <item>
+           <property name="text">
+            <string>Clef Segment</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Key Signature</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Time Signature</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Begin Repeat</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Chord/Rest</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Breath Segment</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>End Bar Line</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Time Signature Announce</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>tick:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="tick">
+          <property name="palette">
+           <palette>
+            <active>
+             <colorrole role="Base">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+             <colorrole role="Window">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </active>
+            <inactive>
+             <colorrole role="Base">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+             <colorrole role="Window">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </inactive>
+            <disabled>
+             <colorrole role="Base">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+             <colorrole role="Window">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>255</green>
+                <blue>255</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </disabled>
+           </palette>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="autoFillBackground">
+           <bool>true</bool>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item row="1" column="0">
-       <widget class="QComboBox" name="segmentType">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="sizeAdjustPolicy">
-         <enum>QComboBox::AdjustToContents</enum>
-        </property>
-        <item>
-         <property name="text">
-          <string>Clef Segment</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Key Signature</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Time Signature</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Begin Repeat</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Chord/Rest</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Breath Segment</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>End Bar Line</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Time Signature Announce</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>SpannerFor:</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="1" column="1">
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>SpannerBack:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="2" column="0">
        <widget class="QListWidget" name="spannerFor"/>
       </item>
-      <item row="3" column="1">
+      <item row="2" column="1">
        <widget class="QListWidget" name="spannerBack"/>
       </item>
-      <item row="4" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Annotations:</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="3" column="1">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Lyrics:</string>
@@ -129,10 +223,10 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="4" column="0">
        <widget class="QListWidget" name="annotations"/>
       </item>
-      <item row="5" column="1">
+      <item row="4" column="1">
        <widget class="QListWidget" name="lyrics"/>
       </item>
      </layout>
