--- a/trunk/mscore/mscore/line.ui
+++ b/trunk/mscore/mscore/line.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>477</width>
-    <height>202</height>
+    <height>211</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,78 +17,18 @@
    <item row="0" column="0" colspan="2">
     <widget class="QGroupBox" name="MeasureBase_2">
      <property name="title">
-      <string>SLine</string>
+      <string notr="true">SLine</string>
      </property>
      <property name="flat">
       <bool>true</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <layout class="QFormLayout" name="formLayout">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>tick2</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QSpinBox" name="tick2">
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-            <property name="maximum">
-             <number>9999999</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <layout class="QFormLayout" name="formLayout_2">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Anchor:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="anchor">
-            <item>
-             <property name="text">
-              <string>SEGMENT</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>MEASURE</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="diagonal">
-          <property name="text">
-           <string>digonal</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
        <layout class="QHBoxLayout">
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>LineSegments</string>
+           <string notr="true">LineSegments</string>
           </property>
          </widget>
         </item>
@@ -99,6 +39,52 @@
             <string>1</string>
            </property>
           </column>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="1">
+         <widget class="QPushButton" name="rightElement">
+          <property name="text">
+           <string notr="true">endElement</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string notr="true">Anchor:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="anchor">
+          <item>
+           <property name="text">
+            <string notr="true">SEGMENT</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string notr="true">MEASURE</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QCheckBox" name="diagonal">
+          <property name="text">
+           <string notr="true">digonal</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QPushButton" name="leftElement">
+          <property name="text">
+           <string notr="true">startElement</string>
+          </property>
          </widget>
         </item>
        </layout>
